# uconsole-cybertui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  install.sh
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  output.rs
crates/cli/src/commands/: audio.rs  bluetooth.rs  city.rs  completion.rs  config_cmd.rs  daemon.rs  display.rs  intel.rs  logs.rs  mod.rs  net.rs  packages.rs  power.rs  process.rs  recon.rs  services.rs  storage.rs  system.rs  update.rs  wm.rs  workspace.rs
crates/cli/tests/: cli_dispatch.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  bluetooth.rs  city.rs  display.rs  lib.rs  logs.rs  net.rs  packages.rs  power.rs  process.rs  services.rs  shell.rs  storage.rs  sys.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: agent_detect.rs  handlers.rs  lib.rs  rpc.rs  server.rs  socket.rs  state.rs
crates/daemon/tests/: server.rs
crates/intel/: Cargo.toml
crates/intel/proptest-regressions/recon/: ssrf.txt
crates/intel/src/: cctv.rs  conflicts.rs  earthquakes.rs  fires.rs  flights.rs  lib.rs  maritime.rs  news.rs  refiller.rs  satellites.rs  weather.rs
crates/intel/src/recon/: crypto.rs  cve.rs  dns.rs  ip.rs  mod.rs  sanctions.rs  ssl.rs  ssrf.rs  whois.rs
crates/intel/testdata/: crypto_risk.csv  sanctions_sample.csv
crates/tui/: Cargo.toml
crates/tui/data/cities/: seattle.json
crates/tui/src/: app.rs  keymap.rs  lib.rs  llm.rs  main.rs  prefs.rs  theme.rs  tools.rs  web_bridge.rs  workspace.rs
crates/tui/src/app/: action.rs  live_data.rs  nav_state.rs  run.rs  screen.rs  state.rs  toast.rs  ui_state.rs
crates/tui/src/modal/: about.rs  choice.rs  confirm.rs  input.rs  mod.rs  overlay.rs  progress.rs  run_action.rs  secret.rs
crates/tui/src/nav/: dispatch.rs  event.rs  menu_stack.rs  mod.rs
crates/tui/src/screens/: ai_logs_v2.rs  ai_v2.rs  audio.rs  audio_v2.rs  bluetooth.rs  bluetooth_v2.rs  city_v2.rs  display.rs  display_v2.rs  editor.rs  editor_v2.rs  files.rs  files_v2.rs  intel_v2.rs  logs.rs  logs_v2.rs  lora.rs  lora_v2.rs  main_menu.rs  mesh.rs  mod.rs  network.rs  network_v2.rs  packages.rs  packages_v2.rs  power.rs  power_v2.rs  processes.rs  processes_v2.rs  recon_v2.rs  screensaver_v2.rs  services.rs  services_v2.rs  settings.rs  settings_v2.rs  storage.rs  storage_v2.rs  stubs_v2.rs  submenu.rs  system.rs  (+2 more)
crates/tui/src/screens/city/: geo.rs  mod.rs  overpass.rs  render.rs  roads.rs  traffic.rs  weather.rs
crates/tui/src/screens/intel/: mod.rs
crates/tui/src/screens/lora/: http.rs  proto.rs
crates/tui/src/screens/overworld/: mod.rs
crates/tui/src/screens/recon/: mod.rs
crates/tui/src/ui/: menu_bar.rs  mod.rs  palette.rs  tab_strip.rs  top_menu.rs
crates/tui/src/util/: mod.rs  ring.rs
crates/tui/src/widgets/: menu_list.rs  mod.rs
crates/tui/src/wm/: ansi.rs  broadcaster.rs  input.rs  keymap.rs  manager.rs  mod.rs  modal.rs  popup.rs  pty.rs  render.rs  tree.rs  window.rs
crates/tui/tests/: lora_http_live.rs  palette_model.rs  tz_diag.rs  workspace_model.rs
crates/web/: Cargo.toml
crates/web/src/: api.rs  auth.rs  lib.rs  main.rs  run.rs  shell.rs  ws.rs
crates/web/static/: app.js
crates/web/templates/: index.html
crates/web/tests/: lan_smoke.rs  safe_test_hook.rs
crates/wifi-radar/: Cargo.toml
crates/wifi-radar/data/: tags.example.json
crates/wifi-radar/src/: api.rs  assets.rs  ble_devices.rs  ble_scanner.rs  csi.rs  devices.rs  frames.rs  lib.rs  main.rs  rssi_model.rs  run.rs  scanner.rs  shell.rs  tags.rs
crates/wifi-radar/templates/: index.html
crates/wifi-radar/tests/: binary_smoke.rs  dev_mode_frames.rs  devices_store.rs  frames_fixtures.rs  http_api.rs  skeleton.rs  sse_live.rs  web_shell.rs
crates/wifi-radar/web/: app.js  index.html  radar.js  style.css
docs/: CONTRIBUTING.md  configuration.md  development.md  installation.md  orbital-notes.md  screens.md
docs/photos/: README.md
docs/superpowers/plans/: 2026-06-27-pane-badges.md  2026-06-27-uconsole-keymap-and-phase3-wm.md  2026-06-30-tui-polish-and-features.md  2026-07-02-wifi-radar.md  2026-07-05-herd-style-ui-and-cli.md  2026-07-08-user-keymap.md  2026-07-15-sub-screen-esc.md
docs/superpowers/specs/: 2026-06-27-pane-badges-design.md  2026-06-28-tui-ux-improvements-design.md  2026-06-30-lora-screen-design.md  2026-06-30-lora-screen-plan.md  2026-06-30-meshtastic-web-analysis.md  2026-06-30-tui-polish-and-features-design.md  2026-07-08-user-keymap-design.md  2026-07-15-sub-screen-esc-design.md
docs/wiki/: Architecture.md  Hardening.md  Hardware-Setup.md  Home.md  Keymaps.md  Phase-1-TUI.md  Phase-2-PTY-ANSI.md  Phase-3-WM.md  Phase-4-Polish.md  Phase-5-Modals.md  Phase-6-City.md  Phase-7-Carousel-Intel.md  Photos.md  Roadmap.md  WiFi-Vitals-Nexmon-CM4.md
install/: install.sh  wifi-vitals.sh
scripts/: fetch_city_roads.py  safe-test
scripts/sh/: cargo-test-with-safe-test.bash
scripts/whatsapp-bridge/: bridge.mjs  package.json
