[workspace]
resolver = "2"
members = ["crates/core", "crates/tui", "crates/web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ankur"]
rust-version = "1.80"

[workspace.dependencies]
# async
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# tui
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.10"

# web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
askama = "0.12"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
dirs = "5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"

# tui-window-manager: PTY + ANSI parser
portable-pty = "0.8"
vte = "0.13"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# http: optional Meshtastic-over-LAN HTTP bridge (LoRa screen).
# Pinned to match `crates/web`'s choice so the workspace shares one
# resolver entry — only enabled when the user opts into the
# `cyberdeck-tui/http` feature.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
