[workspace]
resolver = "2"
members = ["crates/core", "crates/tui", "crates/web", "crates/wifi-radar"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ankur"]
rust-version = "1.80"

[workspace.dependencies]
# async
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# tui
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.10"

# web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
askama = "0.12"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
dirs = "5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"

# tui-window-manager: PTY + ANSI parser
portable-pty = "0.8"
vte = "0.13"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# http: optional Meshtastic-over-LAN HTTP bridge (LoRa screen).
# Pinned to match `crates/web`'s choice so the workspace shares one
# resolver entry — only enabled when the user opts into the
# `cyberdeck-tui/http` feature.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# wifi-radar: 802.11 frame capture (pure-Rust pcap reader, no libpcap C dep)
pcap-file = "2"

# Embed the SPA assets into the binary so `/static/*` works regardless of cwd.
# Without this, a system-installed `wifi-radar` served from `/usr/local/bin`
# would 404 every CSS/JS asset because `--static-dir=crates/wifi-radar/web`
# resolves against the cwd (which is `/` under systemd).
rust-embed = "8"
mime_guess = "2"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
