[package]
name = "cyberdeck"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cyberdeck"
path = "src/main.rs"

[dependencies]
cyberdeck-core = { path = "../core" }
cyberdeck-daemon = { path = "../daemon" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "string"] }
interprocess = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
