[package]
name = "cyberdeck"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cyberdeck"
path = "src/main.rs"

[dependencies]
cyberdeck-core = { path = "../core" }
cyberdeck-daemon = { path = "../daemon" }
# `cyberdeck-tui` exposes the bundled road loader + geo/weather
# clients so the `city` verb can share one data path with the TUI
# instead of re-implementing the HTTP clients. The TUI crate has no
# runtime dependency on the CLI, so this is one-way (CLI → TUI).
cyberdeck-tui = { path = "../tui" }
# `cyberdeck-intel` powers the `intel` verb (Phase 7 M6). Pulling the
# types in directly lets the CLI print the same JSON shape whether
# reached via the daemon or in direct mode; otherwise the CLI would
# shell out to itself or duplicate the layer list.
cyberdeck-intel = { path = "../intel" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "string"] }
interprocess = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
