[package]
name = "cyberdeck-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "OS-level control primitives for the cyberdeck-tui project."

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
humantime.workspace = true
futures.workspace = true
uuid.workspace = true
