[package]
name = "cyberdeck-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cyberdeck-core = { path = "../core" }
cyberdeck-tui   = { path = "../tui" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
interprocess = "2"
once_cell = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
