[package]
name = "cyberdeck-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Cyberdeck OS-level TUI: a rich ratatui front-end for cyberdeck-core."

[features]
web = ["dep:cyberdeck-web"]
# uconsole-keymap: makes uconsole the default profile when CYBERDECK_KEYMAP
# isn't set. Empty because the runtime check is in `wm/keymap.rs`; the
# feature just changes the *default* so an unattended build for the
# device boots straight into uconsole behaviour.
uconsole-keymap = []
# http: pulls in `reqwest` and builds the `HttpLoraTransport` so the LoRa
# screen can talk to a Meshtastic node over LAN HTTP. Off by default so
# a default `cargo build` doesn't grow the dep graph for users who don't
# own a node. Enable with `--features http`.
http = ["dep:reqwest"]

[dependencies]
cyberdeck-core = { path = "../core" }
cyberdeck-web = { path = "../web", optional = true }
reqwest = { workspace = true, optional = true }

ratatui.workspace = true
crossterm.workspace = true
tui-input.workspace = true

# tui-window-manager: PTY + ANSI parser
portable-pty.workspace = true
vte.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true

tokio.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
humantime.workspace = true
rand.workspace = true
once_cell.workspace = true
async-trait = "0.1"
