[package]
name = "cyberdeck-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Cyberdeck OS-level TUI: a rich ratatui front-end for cyberdeck-core."

[features]
default = ["http"]
web = ["dep:cyberdeck-web"]
# uconsole-keymap: makes uconsole the default profile when CYBERDECK_KEYMAP
# isn't set. Empty because the runtime check is in `wm/keymap.rs`; the
# feature just changes the *default* so an unattended build for the
# device boots straight into uconsole behaviour.
uconsole-keymap = []
# http: pulls in `reqwest` and builds the `HttpLoraTransport` so the LoRa
# screen can talk to a Meshtastic node over LAN HTTP. Enabled by
# default — the install script and any `cargo build -p cyberdeck-tui`
# invocation ships the transport. Without it, `maybe_swap_transport`
# falls back to `FakeTransport` (always disconnected) and the user
# sees "not connected" even when their IP is correct, which is the
# failure mode that bit the first user (10.0.0.193 worked in the
# browser, showed not-connected in the TUI because their installed
# binary didn't have `reqwest` linked).
http = ["dep:reqwest"]

[dependencies]
cyberdeck-core = { path = "../core" }
cyberdeck-web = { path = "../web", optional = true }
reqwest = { workspace = true, optional = true }

ratatui.workspace = true
crossterm.workspace = true
tui-input.workspace = true

# tui-window-manager: PTY + ANSI parser
portable-pty.workspace = true
vte.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true

tokio.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
humantime.workspace = true
rand.workspace = true
once_cell.workspace = true
# Prefs persistence under $XDG_CONFIG_HOME / cyberdeck/prefs.json.
# Already in the workspace dependency table; pulled in here so the
# tui crate can resolve `dirs::config_dir()` without growing the
# root Cargo.toml.
dirs.workspace = true
async-trait = "0.1"

# Both a library (src/lib.rs) and a binary (src/main.rs) share this
# crate. The library exists so integration tests can drive the LoRa
# ingest pipeline end-to-end against `wiremock` without spinning up
# the full ratatui event loop.
[lib]
name = "cyberdeck_tui"
path = "src/lib.rs"

[[bin]]
name = "cyberdeck-tui"
path = "src/main.rs"

[dev-dependencies]
# Integration-test harness for `HttpLoraTransport`. Lets us replay
# firmware `FromRadio` byte sequences against a real HTTP server in
# `tests/lora_http_live.rs` to surface live-only bugs that fake-
# transport unit tests can't reach (e.g., race between the
# handshake response and the first inbound packet).
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Round-trip prefs through a real fs path in `prefs::tests`. The
# `Prefs::save_to` helper does atomic-rename writes so we need a
# real (temp) directory rather than a mock fs.
tempfile = "3"